Store password via QtKeychain

The reading of password is alaready done via QtKeychain, that actually
broke the support for passwords for all platforms != Plasma.
At QtKeychain selects other backends for other platforms.

BUG: 441214
FIXED-IN: 5.22.0